--- a/registerform.html
+++ b/registerform.html
@@ -124,4 +124,30 @@
           </div>
         </div>
       </footer>
+
+      <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const navbar = document.querySelector('.navbar');
+            const navigation = document.querySelector('.navigation');
+            
+            console.log('Script loaded'); 
+            
+            navbar.addEventListener('click', function(e) {
+                if (window.innerWidth <= 768 && e.clientX > window.innerWidth * 0.8) {
+                    console.log('Burger clicked'); 
+                    navbar.classList.toggle('active');
+                    navigation.classList.toggle('active');
+                }
+            });
+
+            document.querySelectorAll('.navigation a').forEach(link => {
+                link.addEventListener('click', function() {
+                    if (window.innerWidth <= 768) {
+                        navbar.classList.remove('active');
+                        navigation.classList.remove('active');
+                    }
+                });
+            });
+        });
+        </script>
 </body>
